--- a/index.html
+++ b/index.html
@@ -4,13 +4,38 @@
 	<title>EJEMPLOS JAVA SCRIPT</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="estilos\estilos.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
 
-	<h1>MI CODIGO NUEVO DE JAVA SCRIPT</h1>
+	<DIV class="container">
+	<h1 class "texto">CALCULADORA DE IVA</h1>
+	<!--<h1>PIENSA DIGITAL</h1>
+	<P CLASS "texto">oscar bonilla</P>
+-->
 
+	<form action="#"><!-- -->
+		
+		<div class="form-group">
+		<label> Precio producto </label>
+		<input type="number" name="precio" id="precio" class="form-control">
+		</div>
+		
+		<div class="form-group">
+		<label> % IVA</label>
+		<input type="number" name="iva" id="iva" class="form-control" min="0" max="100">
+		</div>
 
+		<input type="button" class="btn btn-primary" onclick= "calcular_iva()" name="CALCULAR" value="CALCULAR"></button>
 
+	</form>
+		<!--<h2>EL IVA ES: <span id="resultado"></span> </h2>-->
+		<h2>El IVA es:</h2>
+		<input disabled class= "form-control" id="resultado" type="text">
+		
+
+	</DIV>
+	
 	<script src="scripts/app.js"></script>
 </body>
 </html>
